tests/snapshots/insta_test__add_char-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func(
                    Base(
                        Int,
                    ),
                    [],
                ),
                name: "main",
                args: [],
                body: Block(
                    [
                        Expr(
                            ConvExpr {
                                kind: Assign(
                                    ConvExpr {
                                        kind: LVar(
                                            LVar {
                                                offset: 4,
                                                ty: Base(
                                                    Int,
                                                ),
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        pos: Position {
                                            n_char: 8,
                                            n_line: 2,
                                        },
                                    },
                                    ConvExpr {
                                        kind: Num(
                                            2,
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        pos: Position {
                                            n_char: 16,
                                            n_line: 2,
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                pos: Position {
                                    n_char: 8,
                                    n_line: 2,
                                },
                            },
                        ),
                        Expr(
                            ConvExpr {
                                kind: Assign(
                                    ConvExpr {
                                        kind: LVar(
                                            LVar {
                                                offset: 5,
                                                ty: Base(
                                                    Char,
                                                ),
                                            },
                                        ),
                                        ty: Base(
                                            Char,
                                        ),
                                        pos: Position {
                                            n_char: 8,
                                            n_line: 3,
                                        },
                                    },
                                    ConvExpr {
                                        kind: Cast(
                                            ConvExpr {
                                                kind: LVar(
                                                    LVar {
                                                        offset: 4,
                                                        ty: Base(
                                                            Int,
                                                        ),
                                                    },
                                                ),
                                                ty: Base(
                                                    Int,
                                                ),
                                                pos: Position {
                                                    n_char: 17,
                                                    n_line: 3,
                                                },
                                            },
                                            Base2Base(
                                                Int,
                                                Char,
                                            ),
                                        ),
                                        ty: Base(
                                            Char,
                                        ),
                                        pos: Position {
                                            n_char: 17,
                                            n_line: 3,
                                        },
                                    },
                                ),
                                ty: Base(
                                    Char,
                                ),
                                pos: Position {
                                    n_char: 8,
                                    n_line: 3,
                                },
                            },
                        ),
                        Expr(
                            ConvExpr {
                                kind: Binary(
                                    ConvBinary {
                                        kind: Add,
                                        lhs: ConvExpr {
                                            kind: LVar(
                                                LVar {
                                                    offset: 4,
                                                    ty: Base(
                                                        Int,
                                                    ),
                                                },
                                            ),
                                            ty: Base(
                                                Int,
                                            ),
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 4,
                                            },
                                        },
                                        rhs: ConvExpr {
                                            kind: Cast(
                                                ConvExpr {
                                                    kind: LVar(
                                                        LVar {
                                                            offset: 5,
                                                            ty: Base(
                                                                Char,
                                                            ),
                                                        },
                                                    ),
                                                    ty: Base(
                                                        Char,
                                                    ),
                                                    pos: Position {
                                                        n_char: 12,
                                                        n_line: 4,
                                                    },
                                                },
                                                Base2Base(
                                                    Char,
                                                    Int,
                                                ),
                                            ),
                                            ty: Base(
                                                Int,
                                            ),
                                            pos: Position {
                                                n_char: 12,
                                                n_line: 4,
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                pos: Position {
                                    n_char: 10,
                                    n_line: 4,
                                },
                            },
                        ),
                        Expr(
                            ConvExpr {
                                kind: Binary(
                                    ConvBinary {
                                        kind: Add,
                                        lhs: ConvExpr {
                                            kind: Cast(
                                                ConvExpr {
                                                    kind: LVar(
                                                        LVar {
                                                            offset: 5,
                                                            ty: Base(
                                                                Char,
                                                            ),
                                                        },
                                                    ),
                                                    ty: Base(
                                                        Char,
                                                    ),
                                                    pos: Position {
                                                        n_char: 8,
                                                        n_line: 5,
                                                    },
                                                },
                                                Base2Base(
                                                    Char,
                                                    Int,
                                                ),
                                            ),
                                            ty: Base(
                                                Int,
                                            ),
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 5,
                                            },
                                        },
                                        rhs: ConvExpr {
                                            kind: LVar(
                                                LVar {
                                                    offset: 4,
                                                    ty: Base(
                                                        Int,
                                                    ),
                                                },
                                            ),
                                            ty: Base(
                                                Int,
                                            ),
                                            pos: Position {
                                                n_char: 12,
                                                n_line: 5,
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                pos: Position {
                                    n_char: 10,
                                    n_line: 5,
                                },
                            },
                        ),
                    ],
                ),
                stack_size: 5,
            },
        ),
    ],
}
