tests/snapshots/insta_test__add_char.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 12,
                n_line: 1,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 13,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 15,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 12,
                n_line: 2,
            },
        },
    },
    Token {
        kind: BinOpEq(
            Eq,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 14,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Num(
            2,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 16,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 17,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 13,
                n_line: 3,
            },
        },
    },
    Token {
        kind: BinOpEq(
            Eq,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 15,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 17,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 18,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 4,
            },
        },
    },
    Token {
        kind: BinOp(
            Plus,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 10,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 12,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 13,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 5,
            },
        },
    },
    Token {
        kind: BinOp(
            Plus,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 10,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 12,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 13,
                n_line: 5,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 6,
            },
        },
    },
    Token {
        kind: Eof,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 3,
                n_line: 7,
            },
        },
    },
]
