tests/snapshots/insta_test__array_initializer-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Int,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Array(
                                                        Ident(
                                                            "array",
                                                        ),
                                                        Some(
                                                            Expr {
                                                                kind: Num(
                                                                    3,
                                                                ),
                                                                debug_info: DebugInfo {
                                                                    file_info: FileInfo {
                                                                        file_name: "not impl name.c",
                                                                        src: "int main() {\n    int array[3] = {1, 2};\n}",
                                                                    },
                                                                    pos: Position {
                                                                        n_char: 14,
                                                                        n_line: 1,
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                    ),
                                                },
                                                initializer: Some(
                                                    Array(
                                                        [
                                                            Expr(
                                                                Expr {
                                                                    kind: Num(
                                                                        1,
                                                                    ),
                                                                    debug_info: DebugInfo {
                                                                        file_info: FileInfo {
                                                                            file_name: "not impl name.c",
                                                                            src: "int main() {\n    int array[3] = {1, 2};\n}",
                                                                        },
                                                                        pos: Position {
                                                                            n_char: 20,
                                                                            n_line: 1,
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                            Expr(
                                                                Expr {
                                                                    kind: Num(
                                                                        2,
                                                                    ),
                                                                    debug_info: DebugInfo {
                                                                        file_info: FileInfo {
                                                                            file_name: "not impl name.c",
                                                                            src: "int main() {\n    int array[3] = {1, 2};\n}",
                                                                        },
                                                                        pos: Position {
                                                                            n_char: 23,
                                                                            n_line: 1,
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "int main() {\n    int array[3] = {1, 2};\n}",
                                            },
                                            pos: Position {
                                                n_char: 4,
                                                n_line: 1,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "int main() {\n    int array[3] = {1, 2};\n}",
                },
                pos: Position {
                    n_char: 0,
                    n_line: 0,
                },
            },
        },
    ],
}
