tests/snapshots/insta_test__array_initializer-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func {
                    ret_ty: Base(
                        Int,
                    ),
                    args: [],
                    is_flexible: true,
                },
                name: "main",
                args: [],
                body: Block(
                    [
                        Block(
                            [
                                Expr(
                                    ConvExpr {
                                        kind: Assign(
                                            ConvExpr {
                                                kind: LVar(
                                                    LVar {
                                                        offset: 12,
                                                        ty: Base(
                                                            Int,
                                                        ),
                                                    },
                                                ),
                                                ty: Base(
                                                    Int,
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: ,
                                                    pos: Position {
                                                        n_char: 29,
                                                        n_line: 0,
                                                    },
                                                },
                                            },
                                            ConvExpr {
                                                kind: Num(
                                                    1,
                                                ),
                                                ty: Base(
                                                    Int,
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: ,
                                                    pos: Position {
                                                        n_char: 29,
                                                        n_line: 0,
                                                    },
                                                },
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: ,
                                            pos: Position {
                                                n_char: 29,
                                                n_line: 0,
                                            },
                                        },
                                    },
                                ),
                                Expr(
                                    ConvExpr {
                                        kind: Assign(
                                            ConvExpr {
                                                kind: LVar(
                                                    LVar {
                                                        offset: 8,
                                                        ty: Base(
                                                            Int,
                                                        ),
                                                    },
                                                ),
                                                ty: Base(
                                                    Int,
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: ,
                                                    pos: Position {
                                                        n_char: 32,
                                                        n_line: 0,
                                                    },
                                                },
                                            },
                                            ConvExpr {
                                                kind: Num(
                                                    2,
                                                ),
                                                ty: Base(
                                                    Int,
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: ,
                                                    pos: Position {
                                                        n_char: 32,
                                                        n_line: 0,
                                                    },
                                                },
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: ,
                                            pos: Position {
                                                n_char: 32,
                                                n_line: 0,
                                            },
                                        },
                                    },
                                ),
                            ],
                        ),
                    ],
                ),
                stack_size: 12,
            },
        ),
    ],
}
