tests/snapshots/insta_test__array_initializer.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 0,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 0,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 0,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 9,
                n_line: 0,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 11,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 13,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Ident(
            "array",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 17,
                n_line: 0,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Bracket,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 22,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Num(
            3,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 23,
                n_line: 0,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Bracket,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 24,
                n_line: 0,
            },
        },
    },
    Token {
        kind: BinOpEq(
            Eq,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 26,
                n_line: 0,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 28,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Num(
            1,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 29,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Comma,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 30,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Num(
            2,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 32,
                n_line: 0,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 33,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 34,
                n_line: 0,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 36,
                n_line: 0,
            },
        },
    },
    Token {
        kind: Eof,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 36,
                n_line: 0,
            },
        },
    },
]
